# cdiserrors

./: .gitignore  .secrets.baseline  .travis.yml  MANIFEST.in  Pipfile  README.rst  errors.py  pyproject.toml  setup.py
autherrors/: __init__.py
cdiserrors/: __init__.py
src/: cdiserrors.py
tests/: test_cdiserrors.py  test_flask.py
