[tool.poetry]
name = "cdiserrors"
version = "1.0.0"
description = "Gen3 shared exceptions and utilities."
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
cdislogging = "^1.0.0"
Flask = {version = "^1.1.2", optional = true}

[tool.poetry.extras]
flask = ["Flask"]

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
