[tool.poetry]
name = "cdiserrors"
version = "2.1.0"
description = "Gen3 shared exceptions and utilities."
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.13,<4"
cdislogging = "*"
Flask = {version = "*", optional = true}
werkzeug = "*"

[tool.poetry.extras]
flask = ["Flask"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
deptry = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
